# rivrs-linalg

./: .dockerignore  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  NOTICE  README.md
crates/rivrs/: Cargo.toml  README.md
crates/rivrs-linalg/: Cargo.toml  README.md
crates/rivrs-linalg/src/: lib.rs
crates/rivrs/src/: lib.rs
sparse/: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  NOTICE  README.md
sparse/.claude/: settings.local.json
sparse/.claude/commands/: speckit.analyze.md  speckit.checklist.md  speckit.clarify.md  speckit.constitution.md  speckit.implement.md  speckit.plan.md  speckit.tasks.md  speckit.taskstoissues.md
sparse/.specify/memory/: constitution.md
sparse/.specify/templates/: tasks-template.md
sparse/benches/: matrix_loading.rs  solver_benchmarks.rs
sparse/comparisons/: README.md  analyze_results.py
sparse/comparisons/drivers/: build_ma27.sh  build_mumps.sh  build_spral.sh  build_spral_dense_factor.sh  ma27_benchmark.f90  mumps_benchmark.f90  spral_benchmark.f90  spral_dense_factor.cpp  spral_full_solve.f90  spral_match_order.f90
sparse/comparisons/src/: common.rs  ma27_benchmark.rs  mumps_benchmark.rs  spral_benchmark.rs
sparse/dev/: commands.md  roadmap.md  ssids-log.md  ssids-plan.md
sparse/dev/phase8/: accuracy-investigation.md  backward-error-investigation.md  blas3-refactor.md  d_pretok-investigation.md  error-investigation.md  mc64-dijkstra-heap-bug.md  phase8-audit-investigation.md  two-level-backward-error-investigation.md
sparse/dev/phase9/: phase-9.1c-profiling-report.md  phase-9.1g-experiments.md
sparse/docs/: backward-error-investigation.md  commands.md  mc64-scaling-notes.md  phase-8.1g-report.md  roadmap.md  spral-test-audit.md  ssids-log.md  ssids-plan.md
sparse/docs/phase8/: mc64-pipeline-investigation.md  phase8-blas3-investigation.md
sparse/docs/phase9/: phase-9.1d-contrib-architecture-review.md  phase-9.1g-experiments.md
sparse/docs/references/: INDEX.md
sparse/examples/: README.md  accuracy_benchmark.rs  baseline_collection.rs  basic_usage.rs  block_size_experiment.rs  bratu3d_debug.rs  dense_aptp_blocking.rs  diagnose_failures.rs  export_frontal.rs  front_sizes.rs  mc64_isolation.rs  multiple_rhs.rs  parallel_scaling.rs  profile_matrix.rs  refactorization.rs  scaling_diagnosis.rs  solve_timing.rs  spral_benchmark.rs  spral_comparison.rs  spral_solve_comparison.rs  supernode_stats.rs  workload_analysis.rs
sparse/specs/001-reference-library/: plan.md  quickstart.md  research.md  spec.md  tasks.md
sparse/specs/002-test-matrix-collection/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
sparse/specs/003-spral-golden-results/: data-model.md  decision.md  plan.md  quickstart.md  research.md  spec.md
sparse/specs/004-repo-setup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
sparse/specs/005-test-infrastructure/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
sparse/specs/006-benchmarking-framework/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
sparse/specs/007-ci-setup/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
sparse/specs/008-profiling-debug-tools/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
sparse/specs/009-aptp-data-structures/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
sparse/specs/010-aptp-symbolic/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
sparse/specs/011-metis-ordering/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
sparse/specs/012-mc64-matching-scaling/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
sparse/specs/013-match-order-condensation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
sparse/specs/014-dense-aptp-kernel/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
sparse/specs/015-multifrontal-factorization/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
sparse/specs/016-triangular-solve-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
sparse/specs/017-two-level-aptp/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
sparse/specs/018-sequential-profiling-optimization/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
sparse/specs/019-parallel-factorization-solve/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
sparse/specs/020-supernode-amalgamation/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
sparse/specs/021-workspace-reuse/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
sparse/specs/022-assembly-extraction-opt/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
sparse/specs/023-contrib-workspace-reuse/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
sparse/specs/024-direct-gemm-contrib/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
sparse/specs/025-small-leaf-fastpath/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
sparse/specs/026-robustness-hardening/: data-model.md  plan.md  (+4 more)
sparse/src/: error.rs  io.rs  lib.rs  validate.rs
sparse/test-data/: README.md  metadata.json
sparse/tests/: adversarial.rs  aptp_data_structures.rs  diagnose_factor_vs_solve.rs  hand_constructed.rs  match_order.rs  mc64_matching.rs  mc64_profiling.rs  metis_ordering.rs  multifrontal.rs  property.rs  solve.rs  suitesparse_ci.rs  symbolic_analysis.rs  symbolic_analysis_full.rs
sparse/tools/: build_spral.sh  build_spral_dense_factor.sh  spral_benchmark.f90  spral_dense_factor.cpp  spral_dump_duals.f90  spral_full_solve.f90  spral_greedy_compare.f90  spral_match_costgraph.f90  spral_match_order.f90  spral_scaling_dump.f90  spral_scaling_test.f90
ssids/: CLAUDE.md  Cargo.toml  README.md
ssids/.devcontainer/: docker-compose.yml
ssids/docker/: .dockerignore
ssids/src/: lib.rs
(+244 files in other folders)
