[package]
name = "rivrs-sparse"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
description = "Sparse linear algebra solvers for the Rivrs symbolic-numeric framework"
license = "Apache-2.0"
categories = ["science", "mathematics"]
keywords = ["linear-algebra", "sparse-solver", "numerical-computing", "rust"]

[dependencies]
faer = "0.22"
# serde/serde_json are prod dependencies because the io module (public API) uses
# them for matrix metadata and reference factorization loading. They will also be
# needed for solver configuration serialization in later phases.
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rand = { version = "0.8", optional = true }
rand_distr = { version = "0.4", optional = true }

[features]
test-util = ["rand", "rand_distr"]

[dev-dependencies]
approx = "0.5"
criterion = "0.5"
rand = "0.8"
rand_distr = "0.4"
# Self-referential dev-dependency to enable the test-util feature in tests and
# benchmarks. This is a standard Cargo pattern for activating optional features
# during testing without making them default.
rivrs-sparse = { path = ".", features = ["test-util"] }

[[bench]]
name = "matrix_loading"
harness = false

[profile.dev]
# opt-level = 3 in dev/test profiles because faer's dense linear algebra
# operations are unusably slow at opt-level 0, causing test timeouts.
opt-level = 3

[profile.test]
opt-level = 3

[profile.bench]
opt-level = 3
