[package]
name = "rivrs-ssids"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
description = "Sparse symmetric indefinite direct solvers for rivrs-linalg"
license = "Apache-2.0"
categories = ["science", "mathematics"]
keywords = ["sparse-matrix", "linear-solver", "numerical-computing", "rust"]

[dependencies]
# Sparse matrix representation and operations
sprs = "0.11"

# Dense linear algebra for internal operations
faer = "0.22"

[dev-dependencies]
approx = "0.5"
criterion = "0.5"
rand = "0.8"

[[bench]]
name = "ldlt_benchmarks"
harness = false

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 3

[profile.bench]
opt-level = 3
