[package]
name = "rivrs"
version = "0.1.0"
authors = ["Jared Callaham"]
edition = "2024"
rust-version = "1.87"
description = "Symbolic compiler for Rust"
license = "Apache-2.0"
repository = "https://github.com/jcallaham/rivrs-linalg"
readme = "README.md"
categories = ["science", "mathematics"]
keywords = ["scientific-computing", "numerical-methods", "linear-algebra", "rust"]

[features]
default = ["linalg"]
linalg = ["dep:rivrs-linalg"]

[dependencies]
rivrs-linalg = { path = "../rivrs-linalg", version = "0.1.0", optional = true }
